MFB51: Fixed bug #35629 (crash in http:// wrapper on multiple redirects).